<resources>
    <string name="app_name">Kiwdy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="inicio">Inicio</string>
    <string name="mis_cursos">Mis Cursos</string>
    <string name="title_activity_alumno">AlumnoActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="agenda_de_examenes">Agenda de exámenes</string>
    <string name="inscripciones">Inscripciones</string>
    <string name="mis_inscripciones">Mis inscripciones</string>
    <string name="cursos">Cursos</string>
    <string name="borradores">Borradores</string>
    <string name="detalle_del_curso">Detalle del curso</string>
    <string name="detalle_de_la_seccion">Detalle de la sección</string>
    <string name="progreso_del_alumno">Progreso del alumno</string>
    <string name="crear_curso">Crear curso</string>
    <string name="crear_seccion">Crear sección</string>
    <string name="agendar_examen">Agendar exámen</string>
    <string name="inscriptos">Inscriptos</string>
</resources>