<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@id/nav_inicio">
    <fragment
        android:id="@+id/nav_inicio"
        android:name="com.example.kiwdy.ui.compartido.inicio.InicioFragment"
        android:label="@string/inicio"
        tools:layout="@layout/fragment_inicio" >
        <action
            android:id="@+id/action_nav_inicio_to_detalleCursoFragment"
            app:destination="@id/detalleCursoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_logout"
        android:name="com.example.kiwdy.ui.compartido.logout.LogoutFragment"
        android:label="@string/logout"
        tools:layout="@layout/fragment_logout" />
    <fragment
        android:id="@+id/detalleCursoFragment"
        android:name="com.example.kiwdy.ui.alumno.cursos.DetalleCursoFragment"
        android:label="@string/detalle_del_curso"
        tools:layout="@layout/fragment_detalle_curso" >
        <action
            android:id="@+id/action_detalleCursoFragment_to_cursosFragment"
            app:destination="@id/nav_cursos" />
        <action
            android:id="@+id/action_detalleCursoFragment_to_nav_inicio"
            app:destination="@id/nav_inicio" />
        <action
            android:id="@+id/action_detalleCursoFragment_to_progresoAlumnoFragment2"
            app:destination="@id/progresoAlumnoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_cursos"
        android:name="com.example.kiwdy.ui.compartido.CursosFragment"
        android:label="@string/cursos"
        tools:layout="@layout/fragment_cursos" >
        <action
            android:id="@+id/action_cursosFragment_to_detalleCursoFragment"
            app:destination="@id/detalleCursoFragment" />
        <action
            android:id="@+id/action_cursosFragment_to_detalleSeccionFragment"
            app:destination="@id/detalleSeccionFragment" />
    </fragment>
    <fragment
        android:id="@+id/detalleSeccionFragment"
        android:name="com.example.kiwdy.ui.alumno.cursos.DetalleSeccionFragment"
        android:label="@string/detalle_de_la_seccion"
        tools:layout="@layout/fragment_detalle_seccion" >
        <action
            android:id="@+id/action_detalleSeccionFragment_to_cursosFragment"
            app:destination="@id/nav_cursos" />
    </fragment>
    <fragment
        android:id="@+id/nav_examenes"
        android:name="com.example.kiwdy.ui.compartido.examenes.ExamenesFragment"
        android:label="@string/agenda_de_examenes"
        tools:layout="@layout/fragment_examenes" />
    <fragment
        android:id="@+id/progresoAlumnoFragment"
        android:name="com.example.kiwdy.ui.instructor.inscripciones.ProgresoAlumnoFragment"
        android:label="@string/progreso_del_alumno"
        tools:layout="@layout/fragment_progreso_alumno" >
        <action
            android:id="@+id/action_progresoAlumnoFragment2_to_detalleCursoFragment"
            app:destination="@id/detalleCursoFragment" />
    </fragment>
    <fragment
        android:id="@+id/nav_mis_inscripciones"
        android:name="com.example.kiwdy.ui.alumno.mis_inscripciones.MisIncripcionesFragment"
        android:label="@string/mis_inscripciones"
        tools:layout="@layout/fragment_mis_incripciones" />
</navigation>